# neural_net_amzn

./: README.md  analise_acoes.pbix  analise_exploratoria.ipynb  analise_exploratoria_modelo.ipynb  base_tratada.csv  database.db  model_output.csv  modelo_classificacao.ipynb  pyproject.toml  xgboost_model.joblib
app/: auth.py  main.py  models.py  schemas.py  security.py  settings.py  users.py  webscrapper.py
